--- a/synapse/synapse_SNR_periodic_pthinned.ipynb
+++ b/synapse/synapse_SNR_periodic_pthinned.ipynb
@@ -80,7 +80,7 @@
     "\\end{equation*}\n",
     "\n",
     "\\begin{equation*}\n",
-    "SNR = \\frac{1}{\\sqrt{\\frac{1}{2\\lambda p\\tau}\\left(1-p+p\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)\\right)-1}}\n",
+    "SNR = \\sqrt{\\frac{2\\lambda p\\tau}{1-p+p\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)-2\\lambda p\\tau}}\n",
     "\\end{equation*}\n",
     "</div>"
    ]
@@ -236,7 +236,8 @@
     "SNR &= \\frac{E[x]}{\\sqrt{\\operatorname{Var}(x)}} \\\\\n",
     " &= \\frac{\\lambda p}{\\lambda p\\sqrt{\n",
     "    \\frac{1}{2\\lambda p\\tau}\\left(1-p+p\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)\\right)-1}} \\\\\n",
-    " &= \\frac{1}{\\sqrt{\\frac{1}{2\\lambda p\\tau}\\left(1-p+p\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)\\right)-1}}. \\\\\n",
+    " &= \\frac{1}{\\sqrt{\\frac{1}{2\\lambda p\\tau}\\left(1-p+p\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)\\right)-1}} \\\\\n",
+    " &= \\sqrt{\\frac{2\\lambda p\\tau}{1-p+p\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)-2\\lambda p\\tau}}. \\\\\n",
     "\\end{align*}"
    ]
   },
@@ -797,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   },
   "toc": {
    "colors": {
